# dsait4120-aip-a2-

./: .gitignore  CMakeLists.txt
data/: credits.txt
framework/: CMakeLists.txt
framework/include/framework/: image.h
shared_tests/: grading_helpers.h
src/: helpers.h  main.cpp  your_code_here.h
student_tests/: CMakeLists.txt  cpp_tests.h  main.cpp
